name:                ghcjs-canvas
version:             0.1.0.0
synopsis:            Bindings for the JavaScript Canvas API
-- description:         
homepage:            http://github.com/ghcjs/ghcjs-canvas
license:             MIT
license-file:        LICENSE
author:              Luite Stegeman
maintainer:          stegeman@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  ghc-options: -O1
  exposed-modules:     JavaScript.Canvas
  build-depends:       base >= 4.7 && < 5,
                       text,
                       ghcjs-base
  default-language:    Haskell2010
  include-dirs:        JavaScript
